--- a/_site.yml
+++ b/_site.yml
@@ -12,5 +12,12 @@ navbar:
       href: index.html 
     - text: "About"
       href: about.html
+    - icon: fa fa-github
+      href: https://github.com/cristal307
+    - icon: fa fa-linkedin
+      href: https://www.linkedin.com/in/cristal-rivera-picado/
+    - icon: fa fa-twitter
+      href: https://twitter.com/cristalrivera44
      
 output: distill::distill_article
+theme: "cristal_theme.css"
